--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,34 @@
 }
 body{
   padding: 60px;
+  background-color:cadetblue;
 }
 input{
    color: grey;
   font-size: 1.2rem;
   width: 100%;
+}
+.card{
+  align-content: center;
+  border: 1px solid grey;
+  border-radius: 20px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  overflow: hidden;
+  background-color: darkmagenta;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+.card p{
+  padding: 5px;
+  text-align: center;
+}
+.card img{
+  max-height: 170px;
+}
+.card-grid{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
